# microservices

./: .gitignore  README.md
order_service/: pyproject.toml
order_service/alembic/: env.py
order_service/alembic/versions/: 90e744e0a008_create_table.py
order_service/app/: main.py
order_service/app/api/: __init__.py
order_service/app/api/orders/: crud.py  view.py
order_service/app/api/products/: crud.py  dependencies.py  schemas.py  view.py
order_service/app/core/: config.py
order_service/app/database/: __init__.py  database.py  models.py
order_service/app/models/: __init__.py  order.py  order_product_association.py  product.py
order_service/app/src/: database.py  models.py
shop_service/: .env-example   pyproject.toml
shop_service/app/: main.py
shop_service/app/api/: __init__.py
shop_service/app/api/carts/: cart.py  routes.py  schemas.py
shop_service/app/api/orders/: routes.py  schemas.py  services.py  view.py
shop_service/app/api/products/: crud.py  dependencies.py  routes.py  view.py
shop_service/app/api/users/: authentication.py  crud.py  routes.py  shemas.py  utils.py
shop_service/app/core/: config.py
shop_service/app/database/: database.py  repository.py
shop_service/app/models/: __init__.py  base.py  order.py  order_product_association.py  product.py  user.py
user_service/app/api/auth/: routes.py
user_service/app/models/: base.py
