[tool.poetry]
name = "order_service"
version = "0.1.0"
description = ""
authors = ["oy <olga.kozintsava@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.23"}
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
typer = "^0.9.0"
pydantic = "^2.5.1"
pydantic-settings = "^2.1.0"
aiosqlite = "^0.19.0"
alembic = "^1.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
